<resources>
    <string name="app_name">RetailEcoSystem</string>
    <string name="model_name">RetailEcoSystem</string>


    <string name="attractor">Attractor</string>

    <string name="decision_title1">EXPERIENCE THE</string>
    <string name="decision_title2">Galaxy of Technology</string>
    <string name="decision_subtitle">Tap a category below to explore how the Samsung Galaxy\nsmartphone unlocks a whole new world of possibilities.</string>

    <string name="gear_vr_title">Gear VR &amp; Gear 360</string>
    <string name="gear_vr_subtitle">With your compatible Galaxy smartphone,\nexperience a whole new reality that takes your\nentertainment to the next level.</string>
    <string name="gear_vr_demo">Gear VR Demo</string>
    <string name="gear_vr_info_title">Gear VR &amp; Gear 360</string>
    <string name="gear_vr_info_subtitle">Now you can explore a whole new reality.\nCapture some of the best times of your life with Gear\n360 and relive the moments through your Gear VR and\ncompatible Samsung Galaxy smartphone.</string>


    <string name="smart_tv_title">Smart TV</string>
    <string name="smart_tv_subtitle">With a Samsung phone and compatible Samsung TV,\nyou have more ways to share screens and\nmaximize your entertainment.</string>
    <string name="smart_tv_demo">Smart TV Demo</string>
    <string name="smart_tv_info_title">Smart TV</string>
    <string name="smart_tv_info_subtitle">Samsung has completely redesigned its Smart TV\nexperience. With an new intuitive menu, enhanced\nrecommendations and the ability to share screens\nbetween select Samsung devices, your TV\nis now a whole lot smarter.</string>


    <string name="samsung_pay_title">Samsung Pay</string>
    <string name="samsung_pay_subtitle">Samsung Pay on your Samsung Galaxy phone lets you\nsecurely pay just about anywhere with a quick tap or\nswipe. And with Samsung Pay, you can even use your\nsmartwatch to pay on NFC-enabled payment systems.</string>
    <string name="samsung_pay_demo">Samsung Pay Demo</string>
    <string name="samsung_pay_info_title">Samsung Pay</string>
    <string name="samsung_pay_info_subtitle">Introducing Samsung Pay, the new way to pay with\nyour Samsung Galaxy smartphone. It\'s simple and secure.\nAnd Samsung Pay on your Samsung smartwatch lets you\npay on NFC-enabled payment systems.</string>


    <string name="smart_things_title">SmartThings</string>
    <string name="smart_things_subtitle">Pair your Samsung phone with SmartThings\nto easily secure, control and monitor\nthe whole house from your phone.</string>
    <string name="smart_things_demo">SmartThings Demo</string>
    <string name="smart_things_info_title">SmartThings</string>
    <string name="smart_things_info_subtitle">Smart Home. Intelligent Living. SmartThings lets\nyou easily monitor, control, and secure your\nhome from anywhere.</string>


    <string name="tablet_title">Tablet</string>
    <string name="tablet_subtitle">See how simple and easy it is to transfer documents\nand files, watch your favorite entertainment, and\nmanage your communications between your\nSamsung Galaxy phone and Samsung Galaxy tablet.</string>
    <string name="tablet_demo">Tablet &amp; PC Demo</string>
    <string name="tablet_info_title">Tablet &amp; PC</string>
    <string name="tablet_info_subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing,\nsed do eiusmed tempor incididunt elit ipsum.</string>


    <string name="smart_watch_title">Smartwatch</string>
    <string name="smart_watch_subtitle">With a Samsung Galaxy smartphone and Samsung\nsmartwatch, you stay connected with calls, emails\nand notification - all on your wrist.</string>
    <string name="smart_watch_demo">Smart Watch Demo</string>
    <string name="smart_watch_info_title">Smartwatch</string>
    <string name="smart_watch_info_subtitle">With sleek designs and notifications at-a-glance,\nSamsung smartwatches keep you dialed in. Keep\nthings simple and stay connected with your Samsung\nGalaxy smartphone and Samsung smartwatch.</string>

    <string name="legal_title1">EXPERIENCE THE</string>
    <string name="legal_title2">Galaxy of Technology</string>

    <string name="start_demo">Start Demo</string>
    <string name="product_info">Product Information</string>
    <string name="return_to_main_menu">Return to Main Menu</string>


    <!--Compatible Devices-->
    <string name="s6">Galaxy S6</string>
    <string name="s6_edge">Galaxy S6 edge</string>
    <string name="s6_edge_plus">Galaxy S6 edge+</string>
    <string name="note_5">Note 5</string>

    <!--Legal Description-->
    <string name="legal">©2016 Samsung Electronics America, Inc. Samsung, Samsung Galaxy S, Super AMOLED, Samsung Pay, Samsung Smart Switch, Samsung Gear and Samsung+ are all trademarks of Samsung Electronics Co., Ltd. Use only in accordance with law. Other company and product names mentioned may be trademarks of their respective owners. Screen images simulated; actual appearance of devices may vary. Sequences shortened. Dust and water-resistant based on IP68 rating, which tests submersion in up to 5 feet of water for up to 30 minutes. Fast Charging requires an AFC-compatible charger to work. Wireless phone charging pad sold separately. Battery power consumption depends on factors such as network configuration, carrier network, signal strength, operating temperature, features selected, vibrate mode, backlight settings, browser use, frequency of calls, and voice, data and other application-usage patterns. Portion of memory occupied by existing content. Memory card sold separately. Memory may be expanded up to 2TB. Gear VR: Read and follow warnings and instructions with the Headset before use. The Headset should be calibrated before each use. Not for use by children under 13. A virtual reality experience may trigger health reactions. See a doctor before use if you have a history of seizures. Stop use if you experience health reactions. Gear S2: Sold separately. Gear S2 is compatible with select devices using Android 4.4 and later with at least 1.5GB RAM. Supported devices may vary by carrier and device. Some features may not be available. For best results, connect with compatible Samsung Galaxy devices. Samsung Pay: Samsung Pay is only compatible with select cards, carriers and Samsung devices; see Samsung Pay Support (http://www.samsung.com/Pay) for compatibility information. Smart Switch: Visit www.samsungsmartswitch.com for a list of compatible systems, platforms, devices and terms of use. Certain content (such as DRM-protected content) may not be compatible. Consult any applicable terms and conditions with your content providers to ensure that you have rights to transfer content off your previous device. App matching and recommendation system not available on all devices. Samsung+ app is available via Galaxy Essentials.</string>
    <string name="gear_vr_legal_desc">© 2016 Samsung Electronics America, Inc. Samsung, Samsung Galaxy S and Gear VR, are all trademarks of Samsung Electronics Co., Ltd. Use only in accordance with law. Other company and product names mentioned may be trademarks of their respective owners. Screen images simulated; actual appearance of devices may vary. Sequences shortened. Gear VR and Gear 360 sold separately. Gear VR: Read and follow warnings and instructions with the Headset before use. The Headset should be calibrated before each use. Not for use by children under 13. A virtual reality experience may trigger health reactions. See a doctor before use if you have a history of seizures. Stop use if you experience health reactions. Compatible with select Samsung Galaxy devices.</string>
    <string name="smart_tv_legal_desc">© 2016 Samsung Electronics America, Inc. Samsung, Galaxy S and Quick Connect are all trademarks of Samsung Electronics Co., Ltd. Use only in accordance with law. Other company and product names mentioned may be trademarks of their respective owners. Screen images simulated; actual appearance of devices may vary. Sequences shortened. Internet connection required for streaming, games and apps. Quick Connect: One-step activation after initial setup requires device and TV to be on the same network. Currently available on Galaxy S6/S6 edge and select devices after firmware updates. Quick Connect is compatible with 2015 and later Samsung Smart TVs. For more information, visit http://www.samsung.com/us/experience/smart-tv/.</string>
    <string name="samsung_pay_legal_desc">© 2016 Samsung Electronics America, Inc. Samsung, Galaxy S, Samsung Pay and Gear S are all trademarks of Samsung Electronics Co., Ltd. Use only in accordance with law. Other company and product names mentioned may be trademarks of their respective owners. Screen images simulated; actual appearance of devices may vary. Sequences shortened. Samsung Pay: Samsung Pay is only compatible with select cards, carriers and Samsung devices; see the Samsung Pay Support (http://www.samsung.com/Pay) page for compatibility information. Gear S2: Sold separately. Gear S2 is compatible with select devices using Android 4.4 and later with at least 1.5GB RAM. Supported devices may vary by carrier and device. Some features may not be available. For best results, connect with compatible Samsung Galaxy devices. </string>
    <string name="smart_things_legal_desc">© 2016 Samsung Electronics America, Inc. Samsung, Galaxy S and SmartThings are registered trademarks of Samsung Electronics Co., Ltd. Use only in accordance with law. Other company and product names mentioned may be trademarks of their respective owners. Screen images simulated; actual appearance of devices may vary. Sequences shortened. Samsung SmartThings sold separately.</string>
    <string name="tablet_legal_desc">© 2016 Samsung Electronics America, Inc. Samsung, Galaxy S, SideSync and Galaxy Tab are all trademarks of Samsung Electronics Co., Ltd. Use only in accordance with law. Other company and product names mentioned may be trademarks of their respective owners. Screen images simulated; actual appearance of devices may vary. Sequences shortened. SideSync: For information about devices supported by SideSync, please visit www.samsung.com/us/sidesync.</string>
    <string name="smart_watch_legal_desc">© 2016 Samsung Electronics America, Inc. Samsung, Galaxy S, Samsung Pay, S Health and Gear S are all trademarks of Samsung Electronics Co., Ltd. Use only in accordance with law. Other company and product names mentioned may be trademarks of their respective owners. Screen images simulated; actual appearance of devices may vary. Sequences shortened. Gear S2: Sold separately. Gear S2 is compatible with select devices using Android 4.4 and later with at least 1.5GB RAM. Supported devices may vary by carrier and device. Some features may not be available. For best results, connect with compatible Samsung Galaxy devices. S Health:  This device, S Health, and related software are not intended for use in the diagnosis of disease or other conditions, or in the cure, mitigation, treatment or prevention of disease. Samsung Pay: Samsung Pay is only compatible with select cards, carriers and Samsung devices; see the Samsung Pay Support (http://www.samsung.com/Pay) for compatibility information. </string>

    <!--Production Information-->
    <string name="product_specs">Product Specs</string>
    <string name="product_compatibility">Product Compatibility</string>
    <string name="product_features">Product Features</string>



</resources>
